[metadata]
name = contactsapi
version = 0.0.1
author = BikoCodes
author_email = bikocodes@gmail.com

license = MIT License 
license_file = LICENSE

description = Contacts API Developed By Python.
long_description = file: README.md
long_description_content_type = text/markdown

keywords = setuptools, setup.cfg
url = https://github.com/pypa/contactsapi
project_urls = 
    Homepage = 
    Source Code = https://github.com/PyCQA/pylint
    Issue Tracker = https://github.com/pypa/contactsapi/issues


maintainer = Biko Codes
classifiers = 
    Development Status :: 3 - Alpha
    Framework :: Django
    Intended Audience :: Developers
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Archiving :: Packaging
    

[options]
package_dir = 
    = src
packages = find:
test_suite = tests
include_package_data = TRUETrue
setup_requires =
    setuptools
install_requires=
    python_version<3.10
    pygments

python_requires = >=3.6

[options.packages.find]
where = src

exclude =
	build*
	dist*
	docs*
	tests*
	*.tests
	*.tests.*
	tools*

[options.extras_require]
zip-safe = False
test = 
    tox
    unittest

dev = 
    upgrade-ensurepip
    flake8
    coverage
    setuptools
    twine>=3.1.1
    mypy>=0.701

doc = 
    sphinx>=1.7.9
    sphinx-rtd-theme>=0.4.3
    autodocsumm>=0.1.10
    sphinx-autodoc-typehints>=1.11.1
    sphinxcontrib-blockdiag
    sphinxcontrib-seqdiag
    sphinxcontrib-actdiag
    sphinxcontrib-nwdiag

base = 
    pillow
    docutils
    pygments

full =
    pillow
    docutils
    pygments


[bdist_wheel]
universal = True

[sdist]
formats = zip, gztar

[tool:unittest]
testpaths = tests
python_files = *test_*.py

[flake8]
ignore = E125,E126,E127,E128,E402,E741,E731,W503,F401,W504,F841,E722
max-line-length = 99
exclude = __pycache__,.tox,.git/,docs/,build/,.eggs/
statistics = True
show-source = True
count = True

[coverage:run]

[build_sphinx]
version = local build
release = local build
source_dir = sphinx
build_dir = sphinx/_build

[pycodestyle]
exclude = sphinx/conf.py,setup.py
ignore = E241,E265,E128,E266,E226,E722,E252,E231,W291,E303,E221,E402,E306,E704,E251,E301,W504
max-line-length = 180


[mypy]
disallow_any_decorated = True
disallow_any_generics = True
disallow_any_unimported = False
disallow_subclassing_any = False
disallow_untyped_calls = True
disallow_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_unused_configs = True
warn_return_any = True
warn_redundant_casts = True

